functionality to NavigatePage and Profile

--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -11,6 +11,8 @@
     backdrop-filter: blur(3.5px);
     font-family: "LeagueGothic", "Helvetica Neue", "Helvetica", "Arial";
     user-select: none;
+
+    z-index: 1;
 }
 
 .modal-root .modal {
