--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   --dark-grey: #3F4756;
   --light-grey: #A3ABBD;
   --white: #e3e2f1;
+  --red: #E14E61;
 }
 
 a {
@@ -13,9 +14,14 @@ a {
   text-decoration: none;
 }
 
+p {
+  color: var(--dark-grey);
+}
+
 button.primary {
   border: none;
   background-color: var(--orange);
+  color: var(--dark-grey);
   height: 20px;
   line-height: 0px;
   width: fit-content;
@@ -25,8 +31,9 @@ button.primary {
 }
 
 button.secondary {
-  border: none;
-  background-color: var(--light-grey);
+  border: var(--white) 1px solid;
+  background-color: var(--dark-grey);
+  color: var(--white);
   height: 20px;
   line-height: 0px;
   width: fit-content;
@@ -37,13 +44,20 @@ button.secondary {
 
 button:hover {
   cursor: pointer;
+  box-sizing: border-box;
+  opacity: .9;
+}
+
+button {
+  user-select: none;
 }
 
 input {
   background-color: var(--dark-grey);
   color: var(--white);
-  border: solid var(--teal) 1px;
+  border: solid var(--teal) 2px;
   border-radius: 3px;
+  box-sizing: border-box;
 }
 
 body {
