--- a/src/components/stockCards/StockCards.css
+++ b/src/components/stockCards/StockCards.css
@@ -11,7 +11,7 @@
 .stock-card-root .stock-card {
     /* margin: 1rem auto; */
 
-    width: 300px;
+    width: 250px;
     padding: 1rem;
     display: flex;
     justify-content: space-between;
@@ -46,7 +46,7 @@
 
 .stock-card-root button {
     height: 4rem;
-    margin: auto;
+    margin: 0 1.5rem;
 }
 
 .stock-card-main .stock-card-heart {
@@ -104,4 +104,16 @@
     position: absolute;
     top: -370px;
     left: -70px;
+}
+
+.stock-card-main p {
+    color: var(--white);
+}
+
+.stock-card-main input {
+    width: 150px;
+}
+
+.stock-card-main button {
+    margin: 0 1.5rem;
 }
