--- a/src/components/stockCards/StockCards.css
+++ b/src/components/stockCards/StockCards.css
@@ -21,6 +21,8 @@
     border-radius: 5px;
     align-items: center;
 
+    height: 52px;
+
     cursor: pointer;
 }
 
@@ -36,17 +38,22 @@
     text-align: left;
 }
 
-.stock-card-root .name {
-    font-weight: bold;
-    font-size: 10pt;
+.stock-card-root .symbol {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    margin: 0;
 }
 
-.stock-card-root .symbol.small-text {
-    font-size: 14pt;
+.stock-card-root .name {
+    font-size: 10pt;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    font-style: italic;
 }
 
 .stock-card-root .value {
-    font-weight: 800;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
     display: inline-block;
     vertical-align: middle;
     text-align: right;
@@ -106,12 +113,8 @@
 
 .stock-history-root.desktop .load-main {
     position: absolute;
-    /* bottom: 600px; */
     top: -200px;
     left: -360px;
-    /* width: fit-content;
-    align-items: center;
-    border: solid green 1px; */
 }
 
 .stock-history-root.mobile .load-main {
@@ -121,7 +124,7 @@
 }
 
 .stock-card-main .shares {
-    color: var(--white);
+    color: var(--dark-grey);
     margin: 1rem;
 }
 
@@ -137,6 +140,13 @@
     text-align: right;
     color: var(--white);
     font-weight: 400;
+}
+
+.stock-card-main .shares {
+    font-size: 12pt;
+    margin: 0;
+    text-align: right;
+    color: var(--white);
 }
 
 .stock-card-root .arrow {
